# fraudstream

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  schema-evolution.yml  weekly-geoip-refresh.yml
.specify/memory/: constitution.md
alertmanager/: config.yml
analytics/app/: Home.py
analytics/consumers/: __init__.py  kafka_consumer.py  metrics.py
analytics/queries/: config.py  fraud_rate.py  model_versions.py  rule_triggers.py
analytics/views/: v_fraud_rate_daily.sql  v_model_versions.sql  v_rule_triggers.sql  v_transaction_audit.sql
docs/: KPI_TARGETS.md  SERVICE_OWNERSHIP.md  data_catalog.yaml  dlq-trend-analysis-architecture.md  model-feedback-loop-architecture.md  pii-audit-architecture.md  schema-evolution.md
docs/adr/: ADR-001-STREAM-PROCESSING.md  ADR-002-OBJECT-STORAGE.md  ADR-003-FEATURE-STORE.md  ADR-004-ANALYTICS-QUERY.md
docs/deployment/: CANARY_POLICY.md
docs/postmortems/: PROCESS.md  TEMPLATE.md
docs/runbooks/: CHECKPOINT_RECOVERY.md  DLQ_INSPECTION_AND_RECOVERY.md  OBSERVABILITY_RUNBOOK.md  SCHEMA_MIGRATION.md
infra/: docker-compose.yml
infra/alertmanager/: config.yml
infra/analytics/: Dockerfile
infra/flink/: Dockerfile
infra/iceberg/: catalog-config.properties  init-tables.sh
infra/kafka/: topics.sh
infra/load-gen/: Dockerfile
infra/producer/: Dockerfile
infra/prometheus/: prometheus.yml
infra/scoring-management/: Dockerfile
infra/trino/: jvm.config
pipelines/processing/: config.py  job.py  kafka_metrics_bridge.py  logging_config.py  metrics.py
pipelines/scoring/: __init__.py  circuit_breaker.py  config.py  job_extension.py  management_api.py  metrics.py  ml_client.py  telemetry.py  types.py
rules/: rules.yaml
scripts/: checkpoint-rollback.sh  evolve_iceberg_schema.py  flink-rolling-upgrade.sh  generate_dlq.py  generate_transactions.py  replay-dlq-message.sh  schema-subject-migrate.sh  simulate_persistence.py  validate_feast_schemas.py
specs/003-fraud-rule-engine/: plan.md  spec.md  tasks.md
specs/004-operational-excellence/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/006-analytics-persistence-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-feature-serving-contract/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-analytics-consumer-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+112 files in other folders)
